[gd_scene load_steps=10 format=2]

[ext_resource path="res://Run/Assets/Sprite/Camino.png" type="Texture" id=1]
[ext_resource path="res://Run/Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Run/Scenes/ObstacleSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Run/Scenes/GUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Run/Scripts/CajaGroup.gd" type="Script" id=5]
[ext_resource path="res://Run/Scripts/Background2.gd" type="Script" id=6]
[ext_resource path="res://Run/Assets/Sprite/Fondo_Verde.png" type="Texture" id=7]
[ext_resource path="res://Run/Scenes/Obstacle.tscn" type="PackedScene" id=8]

[sub_resource type="PackedScene" id=1]
resource_local_to_scene = true
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "CajaGroup", "position", "script", "caja_izquierda_path", "caja_centro_path", "caja_derecha_path", "Node2D", "CajaIzquierda", "CajaCentro", "CajaDerecha" ),
"node_count": 4,
"node_paths": [  ],
"nodes": PoolIntArray( -1, -1, 6, 0, -1, 5, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 0, 0, 0, 2147483647, 7, 5, 1, 1, 6, 0, 0, 0, 2147483647, 8, 5, 1, 1, 7, 0, 0, 0, 2147483647, 9, 5, 1, 1, 8, 0 ),
"variants": [ Vector2( 131, 1 ), ExtResource( 5 ), NodePath("CajaIzquierda"), NodePath("CajaCentro"), NodePath("CajaDerecha"), ExtResource( 8 ), Vector2( -3, 1 ), Vector2( 131, -1 ), Vector2( 266, -1 ) ],
"version": 2
}

[node name="Run" type="Node2D"]

[node name="FondoVerde" type="Sprite" parent="."]
visible = false
position = Vector2( 367, 311 )
rotation = 1.5708
scale = Vector2( 0.831058, 1.27024 )
texture = ExtResource( 7 )
vframes = 2
frame = 1

[node name="FondoVerde2" type="Sprite" parent="."]
visible = false
position = Vector2( 759, 321 )
rotation = 1.5708
scale = Vector2( 0.831058, 1.1406 )
texture = ExtResource( 7 )
vframes = 2

[node name="Background2" type="Node2D" parent="."]
visible = false
script = ExtResource( 6 )

[node name="Sprite1" type="Sprite" parent="Background2"]
position = Vector2( -76, 703 )
texture = ExtResource( 1 )
offset = Vector2( 595, 218 )

[node name="Sprite2" type="Sprite" parent="Background2"]
position = Vector2( -76, 77 )
texture = ExtResource( 1 )
offset = Vector2( 595, 218 )

[node name="Sprite3" type="Sprite" parent="Background2"]
position = Vector2( -76, -550 )
texture = ExtResource( 1 )
offset = Vector2( 595, 218 )

[node name="GUI" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Player" parent="." groups=["Player"] instance=ExtResource( 2 )]
position = Vector2( 524, 90 )

[node name="ObstacleSpawner" parent="." instance=ExtResource( 3 )]
position = Vector2( 529, 515 )
caja_group_scene = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="ObstacleSpawner" method="_on_Timer_timeout"]
